[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.20.3"
chrono = "0.4.39"
diff = "0.1.13"
reqwest = "0.12.12"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
